--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,22 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
+            multiDexKeepFile file('multidex-config.txt')
+            lintOptions {
+
+                disable 'InvalidPackage'
+                disable "Instantiatable"
+                checkReleaseBuilds false
+                abortOnError false
+
+            }
             signingConfig signingConfigs.debug
+            minifyEnabled true
+            proguardFiles 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles 'proguard-rules.pro'
         }
     }
 }
